0.79 version all fixes & changes 1. Login modal always display 2. Notifications z-index 3. Scan page for torrents 4. Fix empty-filename bug 5. Fix Remember-me 6. Fix Remember-settings

--- a/content.css
+++ b/content.css
@@ -46,6 +46,7 @@ button.seedr-button-warning {
     height: 100%;
     margin-top: 200px;
     transition: 1s;
+    z-index: 2000;
 }
 
 .seedr-reset {
@@ -212,7 +213,7 @@ button.seedr-button-warning {
 	font-family: 'Open Sans', Arial, 'Lucida Grande', sans-serif !important;
 	font-size:1rem !important;
 	font-weight:normal !important;
-    display: none; width:100%; height:90%; background:rgba(255,255,255,0.6); position:fixed; z-index:1000000; text-align:center; padding-top:10%;top:0;left:0
+    display: none; width:100%; height:90%; background:rgba(255,255,255,0.6); position:fixed; z-index:1000000; text-align:center; padding-top:10%;top:0;left:0;
     transition: 1s;
 }
 
